--- a/src/app/xy/xy-battles/xy-battles.component.html
+++ b/src/app/xy/xy-battles/xy-battles.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group>
   <mat-tab label="Gyms">
-    <mat-card *ngFor="let gym of gyms$ | async" class="example-card back-primary card-main">
+    <mat-card *ngFor="let gym of gyms$ | async" class="example-card back-var card-main">
       <mat-card-header>
         <mat-card-title>{{gym.location}} Gym</mat-card-title>
         <mat-card-subtitle>Rewards: {{gym.reward}}</mat-card-subtitle>
@@ -38,7 +38,7 @@
     </mat-card>
   </mat-tab>
   <mat-tab label="League">
-    <mat-card *ngFor="let leagueMember of leagueMembers$ | async" class="example-card back-primary card-main">
+    <mat-card *ngFor="let leagueMember of leagueMembers$ | async" class="example-card back-var card-main">
       <h3>{{leagueMember.name}}</h3>
       <div class="gym-leader-frame">
         <img height="150px" src={{leagueMember.img_url}} alt="">
@@ -72,7 +72,7 @@
     </mat-card>
   </mat-tab>
   <mat-tab label="Rival">
-    <mat-card *ngFor="let rivalBattle of rivalBattles$ | async" class="example-card back-primary card-main">
+    <mat-card *ngFor="let rivalBattle of rivalBattles$ | async" class="example-card back-var card-main">
       <mat-card-title>{{rivalBattle.order}} Battle</mat-card-title>
       <mat-card-subtitle>{{rivalBattle.location}} - Reward: {{rivalBattle.reward}}</mat-card-subtitle>
       <!-- <div class="gym-leader-frame"> -->
@@ -109,7 +109,7 @@
     </mat-card>
   </mat-tab>
   <mat-tab label="Lysandre">
-    <mat-card *ngFor="let lysandreBattle of lysandreBattles$ | async" class="example-card back-primary card-main">
+    <mat-card *ngFor="let lysandreBattle of lysandreBattles$ | async" class="example-card back-var card-main">
       <mat-card-title>{{lysandreBattle.order}} Battle</mat-card-title>
       <mat-card-subtitle>{{lysandreBattle.location}} - Reward: {{lysandreBattle.reward}}</mat-card-subtitle>
       <img height="150px" src={{lysandreBattle.img_url}} alt="">
@@ -138,7 +138,7 @@
     </mat-card>
   </mat-tab>
   <mat-tab label="AZ">
-    <mat-card *ngFor="let azBattle of azBattle$ | async" class="example-card back-primary card-main">
+    <mat-card *ngFor="let azBattle of azBattle$ | async" class="example-card back-var card-main">
       <mat-card-title>Pokémon Trainer AZ</mat-card-title>
       <mat-card-subtitle>{{azBattle.location}}</mat-card-subtitle>
       <img height="150px" src={{azBattle.img_url}} alt="">
