--- a/src/app/xy/xy-battles/xy-battles.component.scss
+++ b/src/app/xy/xy-battles/xy-battles.component.scss
@@ -22,11 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $secondary;
-}
-
-mat-ink-bar {
-  background-color: red;
+  background-color: $primary;
 }
 
 .gym-leader-frame {
