bw-model adicionado.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -38,6 +38,7 @@
     </button>
     <mat-menu #games="matMenu">
       <button mat-menu-item routerLink="/xy" class="d-inline-flex align-items-center rounded">Pokémon X/Y</button>
+      <button mat-menu-item routerLink="/bw" class="d-inline-flex align-items-center rounded">Pokémon Black/White</button>
     </mat-menu>
   </div>
 </mat-toolbar>
