--- a/src/app/xy/xy-battles/xy-battles.component.scss
+++ b/src/app/xy/xy-battles/xy-battles.component.scss
@@ -26,15 +26,19 @@
 }
 
 .gym-leader-frame {
-  padding: 10px;
+  padding: 5px;
   background-color: #FFF;
-  border-radius: 5px;
-  width: 240px;
+  border-radius: 3px;
+  width: 250px;
   height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.mat-card {
+  padding: 16px;
 }
 
 mat-card-content {
