--- a/src/app/xy/xy-battles/xy-battles.component.html
+++ b/src/app/xy/xy-battles/xy-battles.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group>
+<mat-tab-group dynamicHeight>
   <mat-tab label="Gyms">
     <mat-card *ngFor="let gym of gyms$ | async" class="example-card back-var card-main">
       <mat-card-header>
