--- a/src/app/home/generation/generation.component.html
+++ b/src/app/home/generation/generation.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list *ngIf="pokemons.length > 0" cols="12" rowHeight="220px" gutterSize="30px" class="grid">
+<mat-grid-list *ngIf="pokemons.length > 0; else loading" cols="12" rowHeight="220px" gutterSize="30px" class="grid">
   <mat-grid-tile *ngFor="let pokemon of pokemons" class="tile" [colspan]="colspan">
     <a routerLink="/{{pokemon.species.name}}">
       <mat-card class="poke-card back-var">
@@ -14,3 +14,9 @@
     </a>
   </mat-grid-tile>
 </mat-grid-list>
+
+<ng-template #loading>
+  <div class="loading-spinner">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
